--- a/index.html
+++ b/index.html
@@ -1,67 +1,35 @@
-<p> There's a loving in your eyes all the way
-If I listened to your lies would you say <p>
-
-<p> I'm a man without conviction
-I'm a man who doesn't know
-How to sell a contradiction
-You come and go
-You come and go <p>
-
-<p> Karma Karma Karma Karma Karma Chameleon
-You come and go
-You come and go
-Loving would be easy if your colors were like my dream
-Red, gold and green
-Red, gold and green <p>
-
-<p> Didn't hear your wicked words every day
-And you used to be so sweet I heard you say <p>
-
-<p> That my love was an addiction
-When we cling our love is strong
-When you go you're gone forever
-You string along
-You string along <p>
-
-<p> Karma Karma Karma Karma Karma Chameleon
-You come and go
-You come and go
-Loving would be easy if your colors were like my dream
-Red, gold and green
-Red, gold and green <p>
-
-<p> Every day is like survival
-You're my lover not my rival
-Every day is like survival
-You're my lover not my rival <p>
-
-<p> I'm a man without conviction
-I'm a man who doesn't know
-How to sell a contradiction
-You come and go
-You come and go <p>
-
-<p> Karma Karma Karma Karma Karma Chameleon
-You come and go
-You come and go
-Loving would be easy if your colors were like my dream
-Red, gold and green
-Red, gold and green
-Karma Karma Karma Karma Karma Chameleon
-You come and go
-You come and go
-Loving would be easy if your colors were like my dream
-Red, gold and green
-Red, gold and green
-Karma Karma Karma Karma Karma Chameleon
-You come and go
-You come and go
-Loving would be easy if your colors were like my dream
-Red, gold and green
-Red, gold and green
-Karma Karma Karma Karma Karma Chameleon
-You come and go
-You come and go
-Loving would be easy if your colors were like my dream
-Red, gold and green
-Red, gold and green <p>
+Ready, get ready, yeah...<br>
+<br>
+Ready or not, here I come, you can't hide<br>
+Gonna find you and keep you happy<br>
+Ready or not, here I come, you can't hide<br>
+Gonna love you and make you love me<br>
+<br>
+You can't run away (you can't run away)<br>
+From this love I got, oh baby, (you can't run away)<br>
+Hey baby, 'cause I got a lot, yeah<br>
+Anywhere you go (anywhere you go)<br>
+My poor heart got to know, oh baby<br>
+Hey baby, you can't hide from my love, oh no<br>
+<br>
+Ready or not, here I come, you can't hide<br>
+Gonna find you and keep you happy<br>
+Ready or not, here I come, you can't hide<br>
+Gonna love you and make you love me<br>
+<br>
+Anywhere you go (anywhere you go)<br>
+My poor heart got to know, oh baby, hey baby<br>
+You can't hide from my love, oh no, yeah yeah, mm-hmm<br>
+<br>
+Ready, get ready<br>
+Ready, get ready<br>
+<br>
+Ready or not, here I come, you can't hide<br>
+Gonna find you and keep you happy<br>
+Ready or not, here I come, you can't hide<br>
+You better come on, baby, oh yeah, oh yeah<br>
+Gonna find you and I'll make you happy<br>
+Ready or not, here I come, you can't hide<br>
+I'm gonna find you now, yeah<br>
+Gonna find you and I'll make you happy<br>
+Anywhere you hide now, oh yeah, yeah<br>
