--- a/index.html
+++ b/index.html
@@ -1,71 +1,1 @@
-Ready, get ready, yeah...<br>
-<<<<<<< Updated upstream
-<br>
-Ready or not, here I come, you can't hide<br>
-Gonna find you and keep you happy<br>
-Ready or not, here I come, you can't hide<br>
-Gonna love you and make you love me<br>
-<br>
-You can't run away (you can't run away)<br>
-From this love I got, oh baby, (you can't run away)<br>
-Hey baby, 'cause I got a lot, yeah<br>
-Anywhere you go (anywhere you go)<br>
-My poor heart got to know, oh baby<br>
-Hey baby, you can't hide from my love, oh no<br>
-<br>
-Ready or not, here I come, you can't hide<br>
-Gonna find you and keep you happy<br>
-Ready or not, here I come, you can't hide<br>
-Gonna love you and make you love me<br>
-<br>
-Anywhere you go (anywhere you go)<br>
-My poor heart got to know, oh baby, hey baby<br>
-You can't hide from my love, oh no, yeah yeah, mm-hmm<br>
-<br>
-Ready, get ready<br>
-Ready, get ready<br>
-<br>
-Ready or not, here I come, you can't hide<br>
-Gonna find you and keep you happy<br>
-Ready or not, here I come, you can't hide<br>
-You better come on, baby, oh yeah, oh yeah<br>
-Gonna find you and I'll make you happy<br>
-Ready or not, here I come, you can't hide<br>
-I'm gonna find you now, yeah<br>
-Gonna find you and I'll make you happy<br>
-Anywhere you hide now, oh yeah, yeah<br>
-
-Ready or not, here I come, you can't hide<br>
-Gonna find you and keep you happy<br>
-Ready or not, here I come, you can't <br>hide
-Gonna love you and make you love me<br>
-
-You can't run away (you can't run away)<br>
-From this love I got, oh baby, (you can't r<br>un away)
-Hey baby, 'cause I got a lot, yeah<br>
-Anywhere you go (anywhere you go)<br>
-My poor heart got to know, oh baby<br>
-Hey baby, you can't hide from my love,<br> oh no
-<br>
-Read<br>y or not, here I come, you can't hide
-Gonna fi<br>nd you and keep you happy
-Ready or not<br>, here I come, you can't hide
-Gonna love you a<br>nd make you love me
-<br>
-Anyw<br>here you go (anywhere you go)
-My poor <br>heart got to know, oh baby, hey baby
-You can't hi<br>de from my love, oh no, yeah yeah, mm-hmm
-<br>
-Read<br>y, get ready
-Ready, g<br>et ready
-<br>
-Read<br>y or not, here I come, you can't hide
-Gonna fi<br>nd you and keep you happy
-Ready or not<br>, here I come, you can't hide
-You better come <br>on, baby, oh yeah, oh yeah
-Gonna find you and I<br>'ll make you happy
-Ready or not, here I com<br>e, you can't hide
-I'm gonna find you now, yeah<br>
-Gonna find you and I'll make you<br> happy
-Anywhere you hide now, oh yeah, yeah
->>>>>>> Stashed changes
+Affr<br>ilachian is a word coined by the poet Frank X. Walker to describe African American people <br>of regions in and near the Appalachian Mountains in Nort<br>h America. Walker founded the Affrilachian Poets Collective in 1991, whose members include poets and fiction write<br>rs such as Nikki Finney, Kelly Ellis, Paul Taylor, Crystal Wilkinson, Gerald <br>Coleman, and Shana Smith among others. He coi<br>ned the term to confront the assumed whiteness asso<br>ciated with the definition of the Appalachian region and its res<br>idents…
