--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Affr<br>ilachian is a word coined by the poet Frank X. Walker to describe African American people <br>of regions in and near the Appalachian Mountains in Nort<br>h America. Walker founded the Affrilachian Poets Collective in 1991, whose members include poets and fiction write<br>rs such as Nikki Finney, Kelly Ellis, Paul Taylor, Crystal Wilkinson, Gerald <br>Coleman, and Shana Smith among others. He coi<br>ned the term to confront the assumed whiteness asso<br>ciated with the definition of the Appalachian region and its res<br>idents…
+T&nbsp;hose W&nbsp;ho C&nbsp;an’t
+T&nbsp;aylor F&nbsp;ranson-T&nbsp;hiel
+I will teach my daughter how to carry
+the body of her mother west
+stepping over the R&nbsp;ockies
+to bury her
+beneath the red chest of U&nbsp;tah’s desert.
+C&nbsp;up my hands over hers as she
+smooths oxidized dirt
+careful to cover the
+face first
+if it makes her feel better. S&nbsp;he will learn
+how all daughters of our lineage bury
+sins of unrepentant mothers.
+T&nbsp;he line of graves,
+a long ribcage.
