--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
-T&nbsp;hose W&nbsp;ho C&nbsp;an’t
-T&nbsp;aylor F&nbsp;ranson-T&nbsp;hiel
-I will teach my daughter how to carry
+<h1>Those Who Can’t<h1>
+<h2>Taylor Franson-Thiel</h2>
+<p> I <i>will</i> teach my daughter how to carry
 the body of her mother west
-stepping over the R&nbsp;ockies
+stepping over the <b>Rockies</b>
 to bury her
-beneath the red chest of U&nbsp;tah’s desert.
-C&nbsp;up my hands over hers as she
-smooths oxidized dirt
+beneath the red chest of <b>Utah’s</b> desert.
+Cup my hands over hers as she
+<li>smooths oxidized dirt
 careful to cover the
-face first
-if it makes her feel better. S&nbsp;he will learn
+face first</li>
+if it makes her feel better. She will learn
 how all daughters of our lineage bury
 sins of unrepentant mothers.
-T&nbsp;he line of graves,
-a long ribcage.
+The line of graves,
+a long ribcage.</p>
