--- a/index.html
+++ b/index.html
@@ -1,16 +1,50 @@
-<h1>Those Who Can’t<h1>
-<h2>Taylor Franson-Thiel</h2>
-<p> I <i>will</i> teach my daughter how to carry
-the body of her mother west
-stepping over the <b>Rockies</b>
-to bury her
-beneath the red chest of <b>Utah’s</b> desert.
-Cup my hands over hers as she
-<li>smooths oxidized dirt
-careful to cover the
-face first</li>
-if it makes her feel better. She will learn
-how all daughters of our lineage bury
-sins of unrepentant mothers.
-The line of graves,
-a long ribcage.</p>
+<em> There's a loving in your eyes all the way
+If I listened to your lies would you say </em>
+
+<div> I'm a man without conviction
+I'm a man who doesn't know
+How to sell a contradiction
+You come and go
+You come and go </div>
+
+<p> <h5>Karma</h5> <h4>Karma</h4> <h3>Karma</h3> <h2>Karma</h2> <h1>Karma Chameleon</h1>
+You come and go
+You come and go
+Loving would be easy if your colors were like my dream
+Red, gold and green
+Red, gold and green <p>
+
+<p> Didn't hear your wicked words every day
+And you used to be so sweet I heard you say <p>
+
+<br> That my love was an addiction
+When we cling our love is strong
+When you go you're gone forever
+You string along
+You string along <br>
+
+<p> <h5>Karma</h5> <h4>Karma</h4> <h3>Karma</h3> <h2>Karma</h2> <h1>Karma Chameleon</h1>
+You come and go
+You come and go
+Loving would be easy if your colors were like my dream
+Red, gold and green
+Red, gold and green <p>
+
+
+<p> Every day is like survival
+You're my lover not my rival
+Every day is like survival
+You're my lover not my rival <p>
+
+<p> I'm a man without conviction
+I'm a man who doesn't know
+How to sell a contradiction
+You come and go
+You come and go <p>
+
+<p> <h5>Karma</h5> <h4>Karma</h4> <h3>Karma</h3> <h2>Karma</h2> <h1>Karma Chameleon</h1>
+You come and go
+You come and go
+Loving would be easy if your colors were like my dream
+Red, gold and green
+Red, gold and green <p>
