--- a/index.html
+++ b/index.html
@@ -1,50 +1,2 @@
-<em> There's a loving in your eyes all the way
-If I listened to your lies would you say </em>
-
-<div> I'm a man without conviction
-I'm a man who doesn't know
-How to sell a contradiction
-You come and go
-You come and go </div>
-
-<p> <h5>Karma</h5> <h4>Karma</h4> <h3>Karma</h3> <h2>Karma</h2> <h1>Karma Chameleon</h1>
-You come and go
-You come and go
-Loving would be easy if your colors were like my dream
-Red, gold and green
-Red, gold and green <p>
-
-<p> Didn't hear your wicked words every day
-And you used to be so sweet I heard you say <p>
-
-<br> That my love was an addiction
-When we cling our love is strong
-When you go you're gone forever
-You string along
-You string along <br>
-
-<p> <h5>Karma</h5> <h4>Karma</h4> <h3>Karma</h3> <h2>Karma</h2> <h1>Karma Chameleon</h1>
-You come and go
-You come and go
-Loving would be easy if your colors were like my dream
-Red, gold and green
-Red, gold and green <p>
-
-
-<p> Every day is like survival
-You're my lover not my rival
-Every day is like survival
-You're my lover not my rival <p>
-
-<p> I'm a man without conviction
-I'm a man who doesn't know
-How to sell a contradiction
-You come and go
-You come and go <p>
-
-<p> <h5>Karma</h5> <h4>Karma</h4> <h3>Karma</h3> <h2>Karma</h2> <h1>Karma Chameleon</h1>
-You come and go
-You come and go
-Loving would be easy if your colors were like my dream
-Red, gold and green
-Red, gold and green <p>
+<h1>Affrilachian</h1> is a word coined by the poet <b>Frank X. Walker</b> to describe African American people of regions in and near the <span>Appalachian Mountains</span> in North America. Walker founded the <b>Affrilachian Poets Collective</b> in 1991, whose members include poets and fiction writers such as <br> <ol>Nikki Finney, Kelly Ellis, Paul Taylor, Crystal Wilkinson, Gerald Coleman, and Shana Smith</ol> among others. He coined the term to confront the assumed whiteness associated with the definition of the Appalachian region and its residents…
+<a href="https://www.poetryfoundation.org/poems">CLICK ME FOR POEMS</a>
