--- a/karma.html
+++ b/karma.html
@@ -1,13 +1,13 @@
-<p> There's a loving in your eyes all the way
-If I listened to your lies would you say <p>
+<em> There's a loving in your eyes all the way
+If I listened to your lies would you say </em>
 
-<p> I'm a man without conviction
+<div> I'm a man without conviction
 I'm a man who doesn't know
 How to sell a contradiction
 You come and go
-You come and go <p>
+You come and go </div>
 
-<p> Karma Karma Karma Karma Karma Chameleon
+<p> <h5>Karma</h5> <h4>Karma</h4> <h3>Karma</h3> <h2>Karma</h2> <h1>Karma Chameleon</h1>
 You come and go
 You come and go
 Loving would be easy if your colors were like my dream
@@ -17,18 +17,19 @@ Red, gold and green <p>
 <p> Didn't hear your wicked words every day
 And you used to be so sweet I heard you say <p>
 
-<p> That my love was an addiction
+<br> That my love was an addiction
 When we cling our love is strong
 When you go you're gone forever
 You string along
-You string along <p>
+You string along <br>
 
-<p> Karma Karma Karma Karma Karma Chameleon
+<p> <h5>Karma</h5> <h4>Karma</h4> <h3>Karma</h3> <h2>Karma</h2> <h1>Karma Chameleon</h1>
 You come and go
 You come and go
 Loving would be easy if your colors were like my dream
 Red, gold and green
 Red, gold and green <p>
+
 
 <p> Every day is like survival
 You're my lover not my rival
@@ -41,25 +42,7 @@ How to sell a contradiction
 You come and go
 You come and go <p>
 
-<p> Karma Karma Karma Karma Karma Chameleon
-You come and go
-You come and go
-Loving would be easy if your colors were like my dream
-Red, gold and green
-Red, gold and green
-Karma Karma Karma Karma Karma Chameleon
-You come and go
-You come and go
-Loving would be easy if your colors were like my dream
-Red, gold and green
-Red, gold and green
-Karma Karma Karma Karma Karma Chameleon
-You come and go
-You come and go
-Loving would be easy if your colors were like my dream
-Red, gold and green
-Red, gold and green
-Karma Karma Karma Karma Karma Chameleon
+<p> <h5>Karma</h5> <h4>Karma</h4> <h3>Karma</h3> <h2>Karma</h2> <h1>Karma Chameleon</h1>
 You come and go
 You come and go
 Loving would be easy if your colors were like my dream
