--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
-<h1>Affrilachian</h1> is a word coined by the poet <b>Frank X. Walker</b> to describe African American people of regions in and near the <span>Appalachian Mountains</span> in North America. Walker founded the <b>Affrilachian Poets Collective</b> in 1991, whose members include poets and fiction writers such as <br> <ol>Nikki Finney, Kelly Ellis, Paul Taylor, Crystal Wilkinson, Gerald Coleman, and Shana Smith</ol> among others. He coined the term to confront the assumed whiteness associated with the definition of the Appalachian region and its residents…
-<a href="https://www.poetryfoundation.org/poems">CLICK ME FOR POEMS</a>
+<!DOCTYPE html>
+<!-- saved from url=(0059)file:///Users/stacy/Desktop/an-arrangement-of-pictures.html -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <title>an-arrangement-of-pictures</title>
+    <link rel="stylesheet" href="./an-arrangement-of-pictures_files/image-styles.css">
+</head>
+<body>
+<h1>An arrangement of pictures</h1>
+
+
+  <img src="./an-arrangement-of-pictures_files/hands.jpeg" id="img-0"><img src="./an-arrangement-of-pictures_files/flowers-3.jpeg" id="img-1"><img src="./an-arrangement-of-pictures_files/model-city.jpeg" id="img-2"><img src="./an-arrangement-of-pictures_files/saved_resource" id="img-3"><img src="./an-arrangement-of-pictures_files/dining-hall.jpeg" id="img-4"><img src="./an-arrangement-of-pictures_files/school.jpeg" id="img-5"><img src="./an-arrangement-of-pictures_files/cow.jpeg" id="img-6"><img src="./an-arrangement-of-pictures_files/printing-press.jpeg" id="img-7"><img src="./an-arrangement-of-pictures_files/meeting.jpeg" id="img-8"><img src="./an-arrangement-of-pictures_files/archway.jpeg" id="img-9"><img src="./an-arrangement-of-pictures_files/rooftops.jpeg" id="img-10"><img src="./an-arrangement-of-pictures_files/sunset-2.jpeg" id="img-11"><img src="./an-arrangement-of-pictures_files/skull-and-bones.jpeg" id="img-12"><img src="./an-arrangement-of-pictures_files/hands.jpeg" id="img-13"><img src="./an-arrangement-of-pictures_files/fish.jpeg" id="img-14"><img src="./an-arrangement-of-pictures_files/students-7.jpeg" id="img-15"><img src="./an-arrangement-of-pictures_files/dinner.jpeg" id="img-16"><img src="./an-arrangement-of-pictures_files/reading-2.jpeg" id="img-17"><img src="./an-arrangement-of-pictures_files/school.jpeg" id="img-18"><img src="./an-arrangement-of-pictures_files/file.jpeg" id="img-19"><img src="./an-arrangement-of-pictures_files/model-city.jpeg" id="img-20"><img src="./an-arrangement-of-pictures_files/cross-campus.jpeg" id="img-21"><img src="./an-arrangement-of-pictures_files/football.jpeg" id="img-22"><img src="./an-arrangement-of-pictures_files/dog.jpeg" id="img-23">
+
+</body></html>
